--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Xdgk.Common, Version=0.11.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -43,13 +44,46 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="frmDataQuery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDataQuery.Designer.cs">
+      <DependentUpon>frmDataQuery.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="t.cs" />
+    <Compile Include="UCDataGridView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCDataGridView.Designer.cs">
+      <DependentUpon>UCDataGridView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC\UCCondition.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\UCCondition.Designer.cs">
+      <DependentUpon>UCCondition.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QA.Interface\QA.Interface.csproj">
       <Project>{20CEC77A-150E-46A1-B742-EA1BCC4B57EE}</Project>
       <Name>QA.Interface</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="frmDataQuery.resx">
+      <DependentUpon>frmDataQuery.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UCDataGridView.resx">
+      <DependentUpon>UCDataGridView.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\UCCondition.resx">
+      <DependentUpon>UCCondition.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
