--- a/8.Src/QAProject/QA/App.config
+++ b/8.Src/QAProject/QA/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <!--<connectionStrings configSource="server=(local);uid=sa;pwd=sa;database=bcdb;"></connectionStrings>-->
+  <connectionStrings>
+    <add name="aaa" connectionString="server=(local);uid=sa;pwd=sa;database=hdcdb_t;" />
+  </connectionStrings>
+  
   <appSettings >
     <add key="AppName" value ="QA Project"/>
   </appSettings>
