--- a/8.Src/QAProject/QA/QA.csproj
+++ b/8.Src/QAProject/QA/QA.csproj
@@ -106,7 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Config\ContentInfo.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
