add -d command line option for debug mode

--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -43,7 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DataQueryContent.cs" />
     <Compile Include="DBI.cs" />
     <Compile Include="frmDataQuery.cs">
       <SubType>Form</SubType>
