add content_for_hdc.xml file

--- a/8.Src/QAProject/QA/QA.csproj
+++ b/8.Src/QAProject/QA/QA.csproj
@@ -108,6 +108,9 @@
     <Content Include="Config\ContentInfo.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Config\ContentInfo_for_hdc.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
