--- a/8.Src/QAProject/QA/QA.csproj
+++ b/8.Src/QAProject/QA/QA.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\CommandLineOptions.cs" />
     <Compile Include="Code\Config.cs" />
     <Compile Include="Code\Container.cs" />
     <Compile Include="Code\ContainerFactory.cs" />
