use app..exe.config connectionString

--- a/8.Src/QAProject/BaiCheng/BaiCheng.csproj
+++ b/8.Src/QAProject/BaiCheng/BaiCheng.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -58,6 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bcdb.cs">
+      <DependentUpon>Bcdb.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Bcdb.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -97,6 +101,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="UC\UCConditionDT.cs">
       <SubType>UserControl</SubType>
     </Compile>
