--- a/8.Src/QAProject/QA/App.config
+++ b/8.Src/QAProject/QA/App.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="aaa" connectionString="server=(local);uid=sa;pwd=sa;database=hdcdb_t;" />
+    <add name="BaiCheng.Properties.Settings.bcDBConnectionString"
+        connectionString="Data Source=.;Initial Catalog=bcDB;User ID=sa;Password=sa"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
   <appSettings >
     <add key="AppName" value ="数据查询"/>
   </appSettings>
