add qa_hdc.iss file

--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -122,6 +122,7 @@
     <Content Include="Config\FluxColumnConfig.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Setup\qa_hdc.iss" />
     <None Include="Resource\Lightning.ico" />
     <None Include="Resource\History.ico" />
   </ItemGroup>
