--- a/8.Src/QAProject/QA/App.config
+++ b/8.Src/QAProject/QA/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="BaiCheng.Properties.Settings.bcDBConnectionString"
-        connectionString="Data Source=.;Initial Catalog=bcDB;User ID=sa;Password=sa"
+        connectionString="Data Source=.;Initial Catalog=hdcDB;User ID=sa;Password=sa"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings >
