--- a/8.Src/QAProject/QRes/QRes.csproj
+++ b/8.Src/QAProject/QRes/QRes.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2BDE4B0C-B8FE-4595-82D0-680D940E3AF5}</ProjectGuid>
+    <ProjectGuid>{D5C92484-BC43-4649-BE42-68C46AD947B8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xdgk.UI.Forms</RootNamespace>
-    <AssemblyName>Xdgk.UI.Forms</AssemblyName>
+    <RootNamespace>QRes</RootNamespace>
+    <AssemblyName>QRes</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,36 +34,32 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Xdgk.Common, Version=0.11.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\GlobalAssembly\Xdgk.Common\Xdgk.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormHelper.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Images.Designer.cs">
+      <DependentUpon>Images.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UC\UCCondition.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCCondition.Designer.cs">
-      <DependentUpon>UCCondition.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UC\UCDataGridView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCDataGridView.Designer.cs">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="UC\UCCondition.resx">
-      <DependentUpon>UCCondition.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UC\UCDataGridView.resx">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
+    <None Include="Resource\History.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource\Lightning.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resource\Graph.ICO" />
+    <Content Include="Resource\info.ico" />
+    <Content Include="Resource\Last.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Images.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
