--- a/8.Src/QAProject/VGateQuery/VGateQuery.csproj
+++ b/8.Src/QAProject/VGateQuery/VGateQuery.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{33BFFE77-944C-4E94-83DA-B1CCFDE54DEB}</ProjectGuid>
+    <ProjectGuid>{8E662F76-DBDF-43E4-8E39-753F1A8F7950}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HDC.FluxQuery</RootNamespace>
-    <AssemblyName>HDC.FluxQuery</AssemblyName>
+    <RootNamespace>VGateQuery</RootNamespace>
+    <AssemblyName>VGateQuery</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,37 +36,29 @@
       <HintPath>..\..\..\..\GlobalAssembly\DbNetLink\DbNetLink.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Xdgk.Common, Version=0.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Xdgk.Common, Version=0.13.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\GlobalAssembly\Xdgk.Common\Xdgk.Common.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataQueryContent.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="DBI.cs" />
-    <Compile Include="FormHelper.cs" />
-    <Compile Include="frmDataQuery.cs">
+    <Compile Include="frmGateData.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmDataQuery.Designer.cs">
-      <DependentUpon>frmDataQuery.cs</DependentUpon>
+    <Compile Include="frmGateData.Designer.cs">
+      <DependentUpon>frmGateData.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmHDQuery.cs">
+    <Compile Include="frmGateDataLast.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmHDQuery.Designer.cs">
-      <DependentUpon>frmHDQuery.cs</DependentUpon>
-    </Compile>
-    <Compile Include="HDContent.cs" />
-    <Compile Include="Images.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Images.resx</DependentUpon>
+    <Compile Include="frmGateDataLast.Designer.cs">
+      <DependentUpon>frmGateDataLast.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings.Designer.cs">
@@ -74,37 +66,28 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
-    <Compile Include="UC\UCDataGridView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCDataGridView.Designer.cs">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UC\UCCondition.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCCondition.Designer.cs">
-      <DependentUpon>UCCondition.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QA.Interface\QA.Interface.csproj">
       <Project>{20CEC77A-150E-46A1-B742-EA1BCC4B57EE}</Project>
       <Name>QA.Interface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\QRes\QRes.csproj">
+      <Project>{D5C92484-BC43-4649-BE42-68C46AD947B8}</Project>
+      <Name>QRes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Xdgk.UI.Forms\Xdgk.UI.Forms.csproj">
+      <Project>{2BDE4B0C-B8FE-4595-82D0-680D940E3AF5}</Project>
+      <Name>Xdgk.UI.Forms</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="frmDataQuery.resx">
-      <DependentUpon>frmDataQuery.cs</DependentUpon>
+    <EmbeddedResource Include="frmGateData.resx">
+      <DependentUpon>frmGateData.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmHDQuery.resx">
-      <DependentUpon>frmHDQuery.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Images.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Images.Designer.cs</LastGenOutput>
+    <EmbeddedResource Include="frmGateDataLast.resx">
+      <DependentUpon>frmGateDataLast.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
@@ -112,22 +95,15 @@
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="UC\UCDataGridView.resx">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UC\UCCondition.resx">
-      <DependentUpon>UCCondition.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config\FluxColumnConfig.xml">
+    <None Include="Resource\History.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config\GateColumnConfig.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Setup\qa_hdc.iss" />
-    <None Include="Resource\Lightning.ico" />
-    <None Include="Resource\History.ico" />
+    <Content Include="Resource\Last.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
