--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BaiCheng, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BaiCheng\obj\Debug\BaiCheng.dll</HintPath>
+    </Reference>
     <Reference Include="DbNetLink, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\GlobalAssembly\DbNetLink\DbNetLink.dll</HintPath>
@@ -53,7 +57,6 @@
     <Compile Include="Code\DBI.cs" />
     <Compile Include="Content\StationAlarm.cs" />
     <Compile Include="Content\StationAlarmCollection.cs" />
-    <Compile Include="FormHelper.cs" />
     <Compile Include="Forms\frmDataQuery.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,16 +70,17 @@
       <DependentUpon>frmHDQuery.cs</DependentUpon>
     </Compile>
     <Compile Include="Content\HDContent.cs" />
-    <Compile Include="frmPowerAlaram.cs">
+    <Compile Include="Forms\frmMonthReport.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmPowerAlaram.Designer.cs">
-      <DependentUpon>frmPowerAlaram.cs</DependentUpon>
+    <Compile Include="Forms\frmMonthReport.Designer.cs">
+      <DependentUpon>frmMonthReport.cs</DependentUpon>
     </Compile>
-    <Compile Include="Images.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Images.resx</DependentUpon>
+    <Compile Include="Forms\frmPowerAlaram.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmPowerAlaram.Designer.cs">
+      <DependentUpon>frmPowerAlaram.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings.Designer.cs">
@@ -116,13 +120,8 @@
       <DependentUpon>frmHDQuery.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmPowerAlaram.resx">
+    <EmbeddedResource Include="Forms\frmPowerAlaram.resx">
       <DependentUpon>frmPowerAlaram.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Images.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Images.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
@@ -141,6 +140,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AlarmColumnConfig.xml" />
+    <EmbeddedResource Include="Forms\frmMonthReport.resx">
+      <DependentUpon>frmMonthReport.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Content Include="Config\alarm.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -148,6 +151,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Setup\qa_hdc.iss" />
+    <EmbeddedResource Include="MonthReportColumnConfig.xml" />
     <None Include="Resource\Lightning.ico" />
     <None Include="Resource\History.ico" />
   </ItemGroup>
