--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Content\AlarmManager.cs" />
     <Compile Include="Content\DataQueryContent.cs" />
     <Compile Include="Code\DBI.cs" />
+    <Compile Include="Content\ReportContent.cs" />
     <Compile Include="Content\StationAlarm.cs" />
     <Compile Include="Content\StationAlarmCollection.cs" />
     <Compile Include="Forms\frmDataQuery.cs">
@@ -82,8 +83,18 @@
     <Compile Include="Forms\frmPowerAlaram.Designer.cs">
       <DependentUpon>frmPowerAlaram.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmYearReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmYearReport.Designer.cs">
+      <DependentUpon>frmYearReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportFactory.cs" />
+    <Compile Include="ReportItem.cs" />
+    <Compile Include="ReportItemCollection.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -152,6 +163,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Setup\qa_hdc.iss" />
+    <EmbeddedResource Include="YearReportColumnConfig.xml" />
+    <EmbeddedResource Include="Forms\frmYearReport.resx">
+      <DependentUpon>frmYearReport.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="MonthReportColumnConfig.xml" />
     <None Include="Resource\Lightning.ico" />
     <None Include="Resource\History.ico" />
