--- a/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
+++ b/8.Src/QAProject/HDC.FluxQuery/HDC.FluxQuery.csproj
@@ -31,13 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BaiCheng, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BaiCheng\obj\Debug\BaiCheng.dll</HintPath>
-    </Reference>
     <Reference Include="DbNetLink, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\GlobalAssembly\DbNetLink\DbNetLink.dll</HintPath>
+    </Reference>
+    <Reference Include="FlexCel, Version=4.9.6.0, Culture=neutral, PublicKeyToken=cb8f6080e6d5a4d6, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\GlobalAssembly\FlexCel\FlexCel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -48,6 +48,10 @@
     <Reference Include="Xdgk.Common, Version=0.11.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\GlobalAssembly\Xdgk.Common\Xdgk.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Xdgk.Common.Export, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\GlobalAssembly\Xdgk.Common.Export\Xdgk.Common.Export.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -89,28 +93,16 @@
     <Compile Include="Forms\frmYearReport.Designer.cs">
       <DependentUpon>frmYearReport.cs</DependentUpon>
     </Compile>
-    <Compile Include="Item.cs" />
-    <Compile Include="ItemCollection.cs" />
+    <Compile Include="Code\Item.cs" />
+    <Compile Include="Code\ItemCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportFactory.cs" />
-    <Compile Include="ReportItem.cs" />
-    <Compile Include="ReportItemCollection.cs" />
-    <Compile Include="Strings.Designer.cs">
+    <Compile Include="Code\ReportFactory.cs" />
+    <Compile Include="Code\ReportItem.cs" />
+    <Compile Include="Code\ReportItemCollection.cs" />
+    <Compile Include="Strings1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
-    </Compile>
-    <Compile Include="UC\UCDataGridView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCDataGridView.Designer.cs">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UC\UCCondition.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\UCCondition.Designer.cs">
-      <DependentUpon>UCCondition.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -138,16 +130,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UC\UCDataGridView.resx">
-      <DependentUpon>UCDataGridView.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UC\UCCondition.resx">
-      <DependentUpon>UCCondition.cs</DependentUpon>
-      <SubType>Designer</SubType>
+      <LastGenOutput>Strings1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
