add alarm check interval(second)

--- a/8.Src/QAProject/HDC.FluxQuery/App.config
+++ b/8.Src/QAProject/HDC.FluxQuery/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="a" value ="a - value from Q"/>
+    <add key="AlarmCheckSecond" value ="30"/>
   </appSettings>
 </configuration>
