--- a/8.Src/QAProject/LX/VPumpQuery/VPumpQuery.csproj
+++ b/8.Src/QAProject/LX/VPumpQuery/VPumpQuery.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DbNetLink, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="DbNetLink, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\GlobalAssembly\DbNetLink\DbNetLink.dll</HintPath>
+      <HintPath>..\..\..\..\..\GlobalAssembly\DbNetLink\DbNetLink.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
